<resources>
    <string name="app_name">Eventify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Inputs | Labels | Buttons -->

    <string name="default_web_client_id">123456.apps.googleusercontent.com</string>
    <string name="event_image">Some image description</string>
    <string-array name="ticket_types">
        <item>VIP</item>
        <item>Chaise</item>
        <item>Gradin</item>
    </string-array>

    <string name="input_email">Email</string>
    <string name="input_phone">Phone Number</string>
    <string name="input_email_or_phone">Phone</string>
    <string name="input_full_name">FullName</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm Password</string>

    <string name="txt_or">OR</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_otp_validation">Enter the code sent to you by Email or Mobile number</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_no_reception">Didn\'t receive a verification code?</string>
    <string name="txt_forgot_password_desc">Please enter your registered email to reset your password</string>
    <string name="txt_reset_password_desc">Please enter your new password and confirm it.</string>
    <string name="txtGames">Games</string>
    <string name="txtMaterials">Materials</string>

    <string name="btn_login">Login</string>
    <string name="btn_signup">Submit</string>
    <string name="btn_sendEmail">Send Email</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_sendSMS">Send SMS</string>
    <string name="btn_register_now">Don\'t have an account ? <u>Register Now</u> </string>
    <string name="btn_already_have_account">Already have an account ! <u>Sign In</u> </string>
    <string name="btn_resend_code"><u>Resend code</u></string>
    <string name="btn_terms_and_privacy">By registering you agree to our <u>Terms &amp; Conditions</u> and <u>Privacy Policy</u></string>
    <string name="btn_forgot_password">Forgot password ?</string>
    <string name="btn_remember_me">Remember Me</string>
    <string name="btn_save_changes">Save changes</string>


    <string name="action_1">Show More</string>

    <!--  Menu | Fragments | Navigation -->
    <string name="item_home">Home</string>
    <string name="item_news">News</string>
    <string name="item_store">Store</string>
    <string name="item_profile">Profile</string>
    <string name="item_notification">Notification</string>
    <string name="item_cart">Cart</string>
    <string name="item_favourite">Favourite</string>

    <!--  ErrorsMessages  -->
    <string name="msg_must_not_be_empty">Must not be empty!</string>
    <string name="msg_check_your_email">Must be a valid email!</string>
    <string name="msg_check_your_characters">Must be a at least 6 characters!</string>
    <string name="msg_check_your_confirm_Password">Must be the same password!</string>
    <string name="msg_error_inputs">You Have some errors in your inputs!</string>
    <string name="msg_error_wrong_code">Wrong code!</string>


    <string name="Content_description_app_logo">App Logo</string>
    <string name="Content_description_facebook_button">Facebook Login</string>
    <string name="Content_description_google_button">Google Login</string>

    <string name="msg_coming_soon">Coming soon :)</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="btn_submit">Submit\n</string>
</resources>